<?xml version="1.0" encoding="utf-8"?><!--
   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_image_height"
    android:background="@drawable/nav_header"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nav_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tv_layout_marginLeft"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_textSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nav_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tv_layout_marginLeft"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_textSize"
            android:textStyle="normal" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/nav_user_avatar"
        android:layout_width="@dimen/user_image_length"
        android:layout_height="@dimen/user_image_length"
        android:layout_marginLeft="@dimen/user_image_margin_left"
        android:layout_marginTop="@dimen/user_image_margin_top"
        app:civ_border_color="@color/white" />

</RelativeLayout>