...
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_dialouge_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15sp"
    android:stretchColumns="*">

    <TableRow>
...
